<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="assert_error">Ошибка времени исполнения</string>
    <string name="ok">Ok</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="main_menu_caption">Выбери упражнение:</string>
    <string name="character_menu_caption">Выбери звук или букву:</string>
    <string name="action_diary">Дневник</string>
    <string name="action_authorization">Аутентификация</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about">О приложении</string>
    <string name="action_synchronize">Синхронизировать</string>
    <string name="action_clear">Очистить</string>
    <string name="failed_sync_diary">Не удалось обновить дневник.
        Проверьте подключение к Интернету или повторите попытку позже</string>
    <string name="failed_play_sound">Не удалось запустить звук</string>
    <string name="failed_exercise_start">Не удалось запустить упражнение :(</string>
    <string name="failed_action">Ошибка при работе приложения :(</string>
    <string name="sound_exercise_caption">Предметы со звуком:</string>
    <string name="play_title">Прослушать</string>
    <string name="caption_previous">Назад</string>
    <string name="caption_next">Далее</string>
    <string name="caption_check">Проверить</string>
    <string name="button_create">Создать</string>
    <string name="sound_objects_caption">Предметы со звуком буквы </string>
    <string name="caption_create_word">Создать слово</string>
    <string name="caption_finish">Завершить</string>
    <string name="caption_repeat">Повторить</string>
    <string name="caption_score">Ты набрал %d очков</string>
    <string name="caption_diary">Дневник</string>
    <string name="caption_find_character">Найди букву %s</string>
    <string name="caption_exercise_finished">Поздравляем, упражнение завершено</string>
    <string name="caption_object_contains_character">Выбери предмет с буквой \'%s\'</string>
    <string name="caption_object_begins_character">Выбери предмет начинающийся с буквы \'%s\'</string>
    <string name="caption_object_ends_character">Выбери предмет заканчивающийся на букву \'%s\'</string>
    <string name="caption_date">Дата</string>
    <string name="caption_exercise_name">Название упражнения</string>
    <string name="caption_exercise_score">Набранные очки</string>
    <string name="caption_swap_characters">Переставь буквы местами</string>
    <string name="caption_create_words_from_specified">Составь новые слова</string>
    <string name="caption_string_correct_answer">Ответ: "%s"</string>
    <string name="caption_back">Назад</string>
    <string name="caption_skip">Пропустить</string>
    <string name="caption_abc_book">Букварь</string>
    <string name="caption_current_words_count">Найдено слов: %d</string>
    <string name="caption_login">Логин</string>
    <string name="caption_password">Пароль</string>
    <string name="caption_authorize">Войти</string>
    <string name="caption_cancel">Отмена</string>
    <string name="caption_license_scroll_title">Выберите период дневника</string>
    <string name="caption_days_selected">Выбрано %d дней</string>
    <string name="caption_word_gather_task">Переставь буквы местами</string>
    <string name="alert_title">Внимание</string>
    <string name="error_unknown_error">Произошла неизвестная ошибка</string>
    <string name="alert_bad_credentials">Некорректный логин и/или пароль</string>
    <string name="alert_finish_exercise">Завершить упражнение?</string>
    <string name="alert_exit_exercise">Выйти из упражнения?</string>
    <string name="alert_incorrect_word_creation">Некорректное слово</string>
    <string name="alert_word_already_exists">Данное слово уже существует</string>
    <string name="alert_sure_word_skip">Пропустить данное слово?</string>
    <string name="alert_login_password_not_empty">Поля логин и пароль не должны быть пустыми</string>
    <string name="alert_no_active_license">Отсутствует текущая активная лицензия</string>
    <string name="alert_login_password_incorrect">Введены неверные логин/пароль</string>
    <string name="alert_no_connection">Ошибка доступа сети. Проверьте подключение к Интернету.</string>
    <string name="alert_application_activated">Приложение успешно активировано</string>
    <string name="alert_no_license">Отсутствует текущая активная лицензия\n
        Посетите http://po-znaika.ru для получения дополнительной информации</string>
    <string name="app_name">По-знайка: Алфавит</string>
    <string name="title_activity_character_exercise_item">По-знайка: Упражнение </string>
    <string name="title_activity_character_exercise_menu">По-знайка: Букварь</string>
    <string name="title_activity_single_character_exercise_menu">По-знайка: Выбери упражнение</string>
    <string name="title_activity_diary">По-знайка: Дневник</string>
    <string name="title_activity_word_gather">По-знайка: Слово рассыпалось</string>
    <string name="title_activity_create_words_from_specified">По-знайка: Создай слова</string>
    <string name="hello_world">Hello world!</string>

    <string name="not_all_characters_are_used">Использованы не все буквы</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start">StartActivity</string>

</resources>
