<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/standard_background"
    tools:context="ru.po_znaika.alphabet.CreateWordsFromSpecifiedFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/caption_create_words_from_specified"
                android:background="@color/internal_elements_background"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <ImageView
                android:layout_width="@dimen/help_icon_size"
                android:layout_height="@dimen/help_icon_size"
                android:id="@+id/soundImageView"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/sound_button"/>
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20">

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/resultTextLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50">
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/sourceTextLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:layout_marginBottom="@dimen/small_margin">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60">


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="45">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/resultWordsListView"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/internal_elements_background"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10">

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="45">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_create_word"
                    android:id="@+id/createWordButton"
                    android:background="@color/internal_elements_background"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/caption_current_words_count"
                    android:id="@+id/wordsFoundNumberTextView"
                    android:background="@color/internal_elements_background"
                    android:layout_below="@+id/createWordButton"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="@dimen/small_margin"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_skip"
                    android:id="@+id/skipButton"
                    android:background="@color/internal_elements_background"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <ImageView
                android:layout_width="@dimen/help_icon_size"
                android:layout_height="@dimen/help_icon_size"
                android:id="@+id/backImageView"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/arrow_back"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caption_check"
                android:id="@+id/finishButton"
                android:background="@color/internal_elements_background"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
